feat: slider css

--- a/layout/casper/header.ejs
+++ b/layout/casper/header.ejs
@@ -151,7 +151,7 @@
             <div class="center-text">
               <% theme.top_saying.forEach(function(item){ %>
                 <h2 class="home-header"><%- item.title %></h2>
-                <p><%- item.content %></p>
+                <p class="home-text"><%- item.content %></p>
 		          <% }); %>
             </div>
           </div>
