--- a/source/scss/slidebar.scss
+++ b/source/scss/slidebar.scss
@@ -92,8 +92,7 @@ html.sb-init.sb-active.sb-active-right .menu-icon .after {
   font-weight: 700;
   cursor: default;
   right: -3px;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   text-align: center;
   font-size: 16px;
   .slide-wrapper{
