--- a/source/scss/projects.scss
+++ b/source/scss/projects.scss
@@ -1,59 +1,59 @@
-.projects{
-  width: 100%;
-  padding: 0 20px;
-  text-align: center;
-  // display: flex;
-  display: -webkit-box;
-  flex-wrap:wrap;
-  justify-content: center;
-  .p-item{
-    display: inline-block;
-    width: 250px;
-    margin: 0 10px 35px;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
-    .p-header{
-      padding: 10px 20px;
-      border-top-left-radius: 3px;
-      border-top-right-radius: 3px;
-      color: #333;
-      border-bottom: 1px solid #ddd;
-      background-color: #F5F8FA;
-      a h3{
-        font-size: 22px;
-        margin: 10px 0;
-      }
-    }
-    .p-body{
-      height: 60px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      display: -webkit-box;
-      -webkit-box-orient: vertical;
-      position: relative;
-      margin-bottom: 10px;
-      p{
-        position: relative;
-        top: 50%;
-        -webkit-transform: translateY(-50%);
-           -moz-transform: translateY(-50%);
-            -ms-transform: translateY(-50%);
-             -o-transform: translateY(-50%);
-                transform: translateY(-50%);
-      }
-    }
-    .p-footer{
-      padding: 0 20px 10px;
-      overflow-x: auto;
-      color: #959595;
-      font-size: 12px;
-      margin: 14px 0 5px;
-      span{
-        padding: 0 10px;
-        & i{
-          font-style: normal;
-          font-size: 10px
+.projects {
+    width: 100%;
+    padding: 0 20px;
+    text-align: center;
+    // display: flex;
+    display: -webkit-box;
+    flex-wrap: wrap;
+    justify-content: center;
+    .p-item {
+        display: inline-block;
+        width: 250px;
+        margin: 0 10px 35px;
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+        .p-header {
+            padding: 10px 20px;
+            border-top-left-radius: 3px;
+            border-top-right-radius: 3px;
+            color: #333;
+            border-bottom: 1px solid #ddd;
+            background-color: #F5F8FA;
+            a h3 {
+                font-size: 22px;
+                margin: 10px 0;
+            }
         }
-      }
+        .p-body {
+            height: 60px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            position: relative;
+            margin-bottom: 10px;
+            p {
+                position: relative;
+                top: 50%;
+                -webkit-transform: translateY(-50%);
+                -moz-transform: translateY(-50%);
+                -ms-transform: translateY(-50%);
+                -o-transform: translateY(-50%);
+                transform: translateY(-50%);
+            }
+        }
+        .p-footer {
+            padding: 0 20px 10px;
+            overflow-x: auto;
+            color: #959595;
+            font-size: 12px;
+            margin: 14px 0 5px;
+            span {
+                padding: 0 10px;
+                & i {
+                    font-style: normal;
+                    font-size: 10px
+                }
+            }
+        }
     }
-  }
 }
