feat: coding.me

--- a/layout/casper/footer.ejs
+++ b/layout/casper/footer.ejs
@@ -27,7 +27,8 @@
         </span>
       </p>
       <p>
-        Powered by <a href="https://hexo.io/zh-cn/">Hexo</a> and theme By <a href="https://github.com/yangzj1992/TKL-REVISION">TKL-REVISION</a>
+        Powered by <a href="https://hexo.io/zh-cn/">Hexo</a> & <a href="https://github.com/yangzj1992/TKL-REVISION">TKL-REVISION</a>,
+        Hosted by <a href="https://pages.coding.me">Coding Pages</a> & <a href="https://pages.github.com/">Github Pages</a>
       </p>
     </div>
     <div class="social">
