feat: change coscdn

--- a/layout/casper/header.ejs
+++ b/layout/casper/header.ejs
@@ -12,7 +12,7 @@
         <div class="site-overview">
           <a style="text-transform: none;" href="<%- config.root %><%- config.about_dir %>">
             <div class="site-author">
-              <img class="site-author-img" width="100px" height="100px" data-src="http://qcyoung.qiniudn.com/qcyoung/avatar.jpg">
+              <img class="site-author-img" width="100px" height="100px" data-src="https://yangzj1992-1251901721.cos.ap-beijing.myqcloud.com/images/avatar.jpg">
               <div class="site-author-name"><%= config.author%></div>
             </div>
           </a>
@@ -70,7 +70,7 @@
 
         <div class="cc-license">
           <a href="http://creativecommons.org/licenses/by-nc/4.0">
-            <img data-src="http://qcyoung.qiniudn.com/qcyoung/cc-by-nc.svg">
+            <img data-src="https://yangzj1992-1251901721.cos.ap-beijing.myqcloud.com/images/cc-by-nc.svg">
           </a>
         </div>
 
