--- a/layout/casper/footer.ejs
+++ b/layout/casper/footer.ejs
@@ -62,6 +62,6 @@
     <%- partial('cnzz') %>  
   </div>
 </footer>
-<script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 <script async id="dsq-count-scr" src="https://<%= theme.disqus_shortname %>.disqus.com/count.js" ></script>
 <!-- ============================ END Footer =========================== -->
